// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches the snapshot 1`] = `
<div
  className="loading"
/>
`;

exports[`App should add favorites to state and localStorage when favorited 1`] = `
Object {
  "allFilms": Array [],
  "currentDisplay": "default",
  "default": Array [],
  "favorites": Array [
    Object {
      "cardData": "someData",
    },
  ],
  "isLoading": true,
  "people": Array [],
  "planets": Array [],
  "vehicles": Array [],
}
`;

exports[`App should getStorage on refresh / subsequent mounts 1`] = `
Object {
  "allFilms": Array [
    Object {},
  ],
  "currentDisplay": "default",
  "default": Array [],
  "favorites": Array [
    Object {},
  ],
  "isLoading": false,
  "people": Array [
    Object {},
  ],
  "planets": Array [
    Object {},
  ],
  "vehicles": Array [
    Object {},
  ],
}
`;

exports[`App should have a default state 1`] = `
Object {
  "allFilms": Array [],
  "currentDisplay": "default",
  "default": Array [],
  "favorites": Array [],
  "isLoading": true,
  "people": Array [],
  "planets": Array [],
  "vehicles": Array [],
}
`;

exports[`App should remove favorites from state and localStorage when unfavorited 1`] = `
Object {
  "allFilms": Array [],
  "currentDisplay": "default",
  "default": Array [],
  "favorites": Array [],
  "isLoading": true,
  "people": Array [],
  "planets": Array [],
  "vehicles": Array [],
}
`;

exports[`App should render the app if not Loading 1`] = `
<div
  className="App"
>
  <ScrollingText
    allFilms={Array []}
  />
  <Header
    currentDisplay="default"
    favorites={0}
    handleNavClick={[Function]}
  />
  <CardContainer
    addFavorite={[Function]}
    cardContents={Array []}
    currentDisplay="default"
    removeFavorite={[Function]}
  />
</div>
`;

exports[`App should set favorites to [] if no favorites in localStorage 1`] = `
Object {
  "allFilms": Array [
    Object {},
  ],
  "currentDisplay": "default",
  "default": Array [],
  "favorites": Array [],
  "isLoading": false,
  "people": Array [
    Object {},
  ],
  "planets": Array [
    Object {},
  ],
  "vehicles": Array [
    Object {},
  ],
}
`;
